welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:34: error: value Blue is not a member of object java.awt.Color
	setCouleurBrosse(Color.Blue)
                               ^MethodsPicture:36: error: value Green is not a member of object java.awt.Color
	setCouleurBrosse(Color.Green)
                               ^