welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {

def dessiner()
{baisseBrosse()
	leveBrosse()}







def fairePetitV()
	{avance()
	dessiner()
	avance()
	gauche()
	avance()
	dessiner()
	recule()
	droite()
	avance()
	dessiner()
	avance()
	gauche()	
	}

def faireV()
	{setCouleurBrosse(Color.YELLOW)
	fairePetitV()
	setCouleurBrosse(Color.RED)
	fairePetitV()
	setCouleurBrosse(Color.Blue)
	fairePetitV()
	setCouleurBrosse(Color.Green)
	fairePetitV()	
		}










}
